fix bug overlap balance and address on small screen

--- a/src/assets/scss/commons/input-group.scss
+++ b/src/assets/scss/commons/input-group.scss
@@ -159,4 +159,25 @@
       justify-content: flex-end;
     }
   }
+
+
+  @media (max-width: $smaller-breakpoint) {
+    &__info {
+      &-address {
+        margin-bottom: 25px;
+        display: block; 
+      }
+    }
+
+    &__balance-text {
+      display: inline;
+    }
+
+    &__address {
+      float: inherit;
+      right: inherit;
+    }
+  }
+
+  
 }
